simple.output
Terminals unused in grammar

    T_NUM
    T_THEN


State 92 conflicts: 1 shift/reduce


Grammar

    0 $accept: program T_EOF

    1 program: stmt_list T_SEMICOLON

    2 stmt_list: stmt_list T_SEMICOLON stmt
    3          | stmt

    4 stmt: assignment
    5     | read
    6     | write
    7     | declaration
    8     | construct_while
    9     | construct_repeat
   10     | construct_if
   11     | block

   12 block: T_BEGIN stmt_list T_END

   13 $@1: %empty

   14 $@2: %empty

   15 construct_while: T_WHILE $@1 T_LPAR l_expr T_RPAR $@2 T_DO stmt

   16 $@3: %empty

   17 construct_repeat: T_REPEAT $@3 stmt_list T_UNTIL T_LPAR l_expr T_RPAR

   18 $@4: %empty

   19 $@5: %empty

   20 construct_if: T_IF T_LPAR l_expr T_RPAR $@4 stmt $@5 construct_else

   21 $@6: %empty

   22 construct_else: T_ELSE $@6 stmt
   23               | %empty

   24 l_expr: a_expr op_rel a_expr

   25 op_rel: T_LT
   26       | T_GT
   27       | T_LEQ
   28       | T_GEQ

   29 assignment: T_ID arr_index T_ASSIGN a_expr

   30 declaration: datatype T_ID array_size

   31 array_size: T_LS_BRACKET T_INTEGER T_RS_BRACKET
   32           | %empty

   33 datatype: T_DT_INT
   34         | T_DT_FLOAT

   35 a_expr: a_expr T_ADD a_term
   36       | a_expr T_SUB a_term
   37       | a_term

   38 a_term: a_term T_MUL a_fact
   39       | a_term T_DIV a_fact
   40       | a_fact

   41 a_fact: varref
   42       | T_INTEGER
   43       | T_FLOAT
   44       | '(' a_expr ')'
   45       | T_SUB a_fact
   46       | T_LITERAL_STR

   47 varref: T_ID arr_index

   48 arr_index: T_LS_BRACKET a_expr T_RS_BRACKET
   49          | %empty

   50 read: T_READ varlist

   51 write: T_WRITE expr_list

   52 varlist: varlist T_COMMA varref
   53        | varref

   54 expr_list: expr_list T_COMMA a_expr
   55          | a_expr


Terminals, with rules where they appear

    T_EOF (0) 0
    '(' (40) 44
    ')' (41) 44
    error (256)
    T_NUM (258)
    T_ASSIGN (259) 29
    T_ADD (260) 35
    T_SUB (261) 36 45
    T_MUL (262) 38
    T_DIV (263) 39
    T_DT_INT (264) 33
    T_DT_FLOAT (265) 34
    T_LITERAL_STR (266) 46
    T_READ (267) 50
    T_WRITE (268) 51
    T_SEMICOLON (269) 1 2
    T_COMMA (270) 52 54
    T_LS_BRACKET (271) 31 48
    T_RS_BRACKET (272) 31 48
    T_ID <string> (273) 29 30 47
    T_INTEGER <int> (274) 31 42
    T_FLOAT <float> (275) 43
    T_BEGIN (276) 12
    T_END (277) 12
    T_REPEAT (278) 17
    T_UNTIL (279) 17
    T_DO (280) 15
    T_WHILE (281) 15
    T_IF (282) 20
    T_THEN (283)
    T_ELSE (284) 22
    T_LPAR (285) 15 17 20
    T_RPAR (286) 15 17 20
    T_LT (287) 25
    T_GT (288) 26
    T_LEQ (289) 27
    T_GEQ (290) 28


Nonterminals, with rules where they appear

    $accept (38)
        on left: 0
    program (39)
        on left: 1
        on right: 0
    stmt_list (40)
        on left: 2 3
        on right: 1 2 12 17
    stmt (41)
        on left: 4 5 6 7 8 9 10 11
        on right: 2 3 15 20 22
    block (42)
        on left: 12
        on right: 11
    construct_while (43)
        on left: 15
        on right: 8
    $@1 (44)
        on left: 13
        on right: 15
    $@2 (45)
        on left: 14
        on right: 15
    construct_repeat (46)
        on left: 17
        on right: 9
    $@3 (47)
        on left: 16
        on right: 17
    construct_if (48)
        on left: 20
        on right: 10
    $@4 (49)
        on left: 18
        on right: 20
    $@5 (50)
        on left: 19
        on right: 20
    construct_else (51)
        on left: 22 23
        on right: 20
    $@6 (52)
        on left: 21
        on right: 22
    l_expr <symbol_t*> (53)
        on left: 24
        on right: 15 17 20
    op_rel <int> (54)
        on left: 25 26 27 28
        on right: 24
    assignment <symbol_t*> (55)
        on left: 29
        on right: 4
    declaration <int> (56)
        on left: 30
        on right: 7
    array_size <int> (57)
        on left: 31 32
        on right: 30
    datatype <int> (58)
        on left: 33 34
        on right: 30
    a_expr <symbol_t*> (59)
        on left: 35 36 37
        on right: 24 29 35 36 44 48 54 55
    a_term <symbol_t*> (60)
        on left: 38 39 40
        on right: 35 36 37 38 39
    a_fact <symbol_t*> (61)
        on left: 41 42 43 44 45 46
        on right: 38 39 40 45
    varref <symbol_t*> (62)
        on left: 47
        on right: 41 52 53
    arr_index <symbol_t*> (63)
        on left: 48 49
        on right: 29 47
    read (64)
        on left: 50
        on right: 5
    write (65)
        on left: 51
        on right: 6
    varlist <vector<symbol_t*> > (66)
        on left: 52 53
        on right: 50 52
    expr_list <vector<symbol_t*> > (67)
        on left: 54 55
        on right: 51 54


State 0

    0 $accept: • program T_EOF

    T_DT_INT    shift, and go to state 1
    T_DT_FLOAT  shift, and go to state 2
    T_READ      shift, and go to state 3
    T_WRITE     shift, and go to state 4
    T_ID        shift, and go to state 5
    T_BEGIN     shift, and go to state 6
    T_REPEAT    shift, and go to state 7
    T_WHILE     shift, and go to state 8
    T_IF        shift, and go to state 9

    program           go to state 10
    stmt_list         go to state 11
    stmt              go to state 12
    block             go to state 13
    construct_while   go to state 14
    construct_repeat  go to state 15
    construct_if      go to state 16
    assignment        go to state 17
    declaration       go to state 18
    datatype          go to state 19
    read              go to state 20
    write             go to state 21


State 1

   33 datatype: T_DT_INT •

    $default  reduce using rule 33 (datatype)


State 2

   34 datatype: T_DT_FLOAT •

    $default  reduce using rule 34 (datatype)


State 3

   50 read: T_READ • varlist

    T_ID  shift, and go to state 22

    varref   go to state 23
    varlist  go to state 24


State 4

   51 write: T_WRITE • expr_list

    T_SUB          shift, and go to state 25
    T_LITERAL_STR  shift, and go to state 26
    T_ID           shift, and go to state 22
    T_INTEGER      shift, and go to state 27
    T_FLOAT        shift, and go to state 28
    '('            shift, and go to state 29

    a_expr     go to state 30
    a_term     go to state 31
    a_fact     go to state 32
    varref     go to state 33
    expr_list  go to state 34


State 5

   29 assignment: T_ID • arr_index T_ASSIGN a_expr

    T_LS_BRACKET  shift, and go to state 35

    $default  reduce using rule 49 (arr_index)

    arr_index  go to state 36


State 6

   12 block: T_BEGIN • stmt_list T_END

    T_DT_INT    shift, and go to state 1
    T_DT_FLOAT  shift, and go to state 2
    T_READ      shift, and go to state 3
    T_WRITE     shift, and go to state 4
    T_ID        shift, and go to state 5
    T_BEGIN     shift, and go to state 6
    T_REPEAT    shift, and go to state 7
    T_WHILE     shift, and go to state 8
    T_IF        shift, and go to state 9

    stmt_list         go to state 37
    stmt              go to state 12
    block             go to state 13
    construct_while   go to state 14
    construct_repeat  go to state 15
    construct_if      go to state 16
    assignment        go to state 17
    declaration       go to state 18
    datatype          go to state 19
    read              go to state 20
    write             go to state 21


State 7

   17 construct_repeat: T_REPEAT • $@3 stmt_list T_UNTIL T_LPAR l_expr T_RPAR

    $default  reduce using rule 16 ($@3)

    $@3  go to state 38


State 8

   15 construct_while: T_WHILE • $@1 T_LPAR l_expr T_RPAR $@2 T_DO stmt

    $default  reduce using rule 13 ($@1)

    $@1  go to state 39


State 9

   20 construct_if: T_IF • T_LPAR l_expr T_RPAR $@4 stmt $@5 construct_else

    T_LPAR  shift, and go to state 40


State 10

    0 $accept: program • T_EOF

    T_EOF  shift, and go to state 41


State 11

    1 program: stmt_list • T_SEMICOLON
    2 stmt_list: stmt_list • T_SEMICOLON stmt

    T_SEMICOLON  shift, and go to state 42


State 12

    3 stmt_list: stmt •

    $default  reduce using rule 3 (stmt_list)


State 13

   11 stmt: block •

    $default  reduce using rule 11 (stmt)


State 14

    8 stmt: construct_while •

    $default  reduce using rule 8 (stmt)


State 15

    9 stmt: construct_repeat •

    $default  reduce using rule 9 (stmt)


State 16

   10 stmt: construct_if •

    $default  reduce using rule 10 (stmt)


State 17

    4 stmt: assignment •

    $default  reduce using rule 4 (stmt)


State 18

    7 stmt: declaration •

    $default  reduce using rule 7 (stmt)


State 19

   30 declaration: datatype • T_ID array_size

    T_ID  shift, and go to state 43


State 20

    5 stmt: read •

    $default  reduce using rule 5 (stmt)


State 21

    6 stmt: write •

    $default  reduce using rule 6 (stmt)


State 22

   47 varref: T_ID • arr_index

    T_LS_BRACKET  shift, and go to state 35

    $default  reduce using rule 49 (arr_index)

    arr_index  go to state 44


State 23

   53 varlist: varref •

    $default  reduce using rule 53 (varlist)


State 24

   50 read: T_READ varlist •
   52 varlist: varlist • T_COMMA varref

    T_COMMA  shift, and go to state 45

    $default  reduce using rule 50 (read)


State 25

   45 a_fact: T_SUB • a_fact

    T_SUB          shift, and go to state 25
    T_LITERAL_STR  shift, and go to state 26
    T_ID           shift, and go to state 22
    T_INTEGER      shift, and go to state 27
    T_FLOAT        shift, and go to state 28
    '('            shift, and go to state 29

    a_fact  go to state 46
    varref  go to state 33


State 26

   46 a_fact: T_LITERAL_STR •

    $default  reduce using rule 46 (a_fact)


State 27

   42 a_fact: T_INTEGER •

    $default  reduce using rule 42 (a_fact)


State 28

   43 a_fact: T_FLOAT •

    $default  reduce using rule 43 (a_fact)


State 29

   44 a_fact: '(' • a_expr ')'

    T_SUB          shift, and go to state 25
    T_LITERAL_STR  shift, and go to state 26
    T_ID           shift, and go to state 22
    T_INTEGER      shift, and go to state 27
    T_FLOAT        shift, and go to state 28
    '('            shift, and go to state 29

    a_expr  go to state 47
    a_term  go to state 31
    a_fact  go to state 32
    varref  go to state 33


State 30

   35 a_expr: a_expr • T_ADD a_term
   36       | a_expr • T_SUB a_term
   55 expr_list: a_expr •

    T_ADD  shift, and go to state 48
    T_SUB  shift, and go to state 49

    $default  reduce using rule 55 (expr_list)


State 31

   37 a_expr: a_term •
   38 a_term: a_term • T_MUL a_fact
   39       | a_term • T_DIV a_fact

    T_MUL  shift, and go to state 50
    T_DIV  shift, and go to state 51

    $default  reduce using rule 37 (a_expr)


State 32

   40 a_term: a_fact •

    $default  reduce using rule 40 (a_term)


State 33

   41 a_fact: varref •

    $default  reduce using rule 41 (a_fact)


State 34

   51 write: T_WRITE expr_list •
   54 expr_list: expr_list • T_COMMA a_expr

    T_COMMA  shift, and go to state 52

    $default  reduce using rule 51 (write)


State 35

   48 arr_index: T_LS_BRACKET • a_expr T_RS_BRACKET

    T_SUB          shift, and go to state 25
    T_LITERAL_STR  shift, and go to state 26
    T_ID           shift, and go to state 22
    T_INTEGER      shift, and go to state 27
    T_FLOAT        shift, and go to state 28
    '('            shift, and go to state 29

    a_expr  go to state 53
    a_term  go to state 31
    a_fact  go to state 32
    varref  go to state 33


State 36

   29 assignment: T_ID arr_index • T_ASSIGN a_expr

    T_ASSIGN  shift, and go to state 54


State 37

    2 stmt_list: stmt_list • T_SEMICOLON stmt
   12 block: T_BEGIN stmt_list • T_END

    T_SEMICOLON  shift, and go to state 55
    T_END        shift, and go to state 56


State 38

   17 construct_repeat: T_REPEAT $@3 • stmt_list T_UNTIL T_LPAR l_expr T_RPAR

    T_DT_INT    shift, and go to state 1
    T_DT_FLOAT  shift, and go to state 2
    T_READ      shift, and go to state 3
    T_WRITE     shift, and go to state 4
    T_ID        shift, and go to state 5
    T_BEGIN     shift, and go to state 6
    T_REPEAT    shift, and go to state 7
    T_WHILE     shift, and go to state 8
    T_IF        shift, and go to state 9

    stmt_list         go to state 57
    stmt              go to state 12
    block             go to state 13
    construct_while   go to state 14
    construct_repeat  go to state 15
    construct_if      go to state 16
    assignment        go to state 17
    declaration       go to state 18
    datatype          go to state 19
    read              go to state 20
    write             go to state 21


State 39

   15 construct_while: T_WHILE $@1 • T_LPAR l_expr T_RPAR $@2 T_DO stmt

    T_LPAR  shift, and go to state 58


State 40

   20 construct_if: T_IF T_LPAR • l_expr T_RPAR $@4 stmt $@5 construct_else

    T_SUB          shift, and go to state 25
    T_LITERAL_STR  shift, and go to state 26
    T_ID           shift, and go to state 22
    T_INTEGER      shift, and go to state 27
    T_FLOAT        shift, and go to state 28
    '('            shift, and go to state 29

    l_expr  go to state 59
    a_expr  go to state 60
    a_term  go to state 31
    a_fact  go to state 32
    varref  go to state 33


State 41

    0 $accept: program T_EOF •

    $default  accept


State 42

    1 program: stmt_list T_SEMICOLON •
    2 stmt_list: stmt_list T_SEMICOLON • stmt

    T_DT_INT    shift, and go to state 1
    T_DT_FLOAT  shift, and go to state 2
    T_READ      shift, and go to state 3
    T_WRITE     shift, and go to state 4
    T_ID        shift, and go to state 5
    T_BEGIN     shift, and go to state 6
    T_REPEAT    shift, and go to state 7
    T_WHILE     shift, and go to state 8
    T_IF        shift, and go to state 9

    $default  reduce using rule 1 (program)

    stmt              go to state 61
    block             go to state 13
    construct_while   go to state 14
    construct_repeat  go to state 15
    construct_if      go to state 16
    assignment        go to state 17
    declaration       go to state 18
    datatype          go to state 19
    read              go to state 20
    write             go to state 21


State 43

   30 declaration: datatype T_ID • array_size

    T_LS_BRACKET  shift, and go to state 62

    $default  reduce using rule 32 (array_size)

    array_size  go to state 63


State 44

   47 varref: T_ID arr_index •

    $default  reduce using rule 47 (varref)


State 45

   52 varlist: varlist T_COMMA • varref

    T_ID  shift, and go to state 22

    varref  go to state 64


State 46

   45 a_fact: T_SUB a_fact •

    $default  reduce using rule 45 (a_fact)


State 47

   35 a_expr: a_expr • T_ADD a_term
   36       | a_expr • T_SUB a_term
   44 a_fact: '(' a_expr • ')'

    T_ADD  shift, and go to state 48
    T_SUB  shift, and go to state 49
    ')'    shift, and go to state 65


State 48

   35 a_expr: a_expr T_ADD • a_term

    T_SUB          shift, and go to state 25
    T_LITERAL_STR  shift, and go to state 26
    T_ID           shift, and go to state 22
    T_INTEGER      shift, and go to state 27
    T_FLOAT        shift, and go to state 28
    '('            shift, and go to state 29

    a_term  go to state 66
    a_fact  go to state 32
    varref  go to state 33


State 49

   36 a_expr: a_expr T_SUB • a_term

    T_SUB          shift, and go to state 25
    T_LITERAL_STR  shift, and go to state 26
    T_ID           shift, and go to state 22
    T_INTEGER      shift, and go to state 27
    T_FLOAT        shift, and go to state 28
    '('            shift, and go to state 29

    a_term  go to state 67
    a_fact  go to state 32
    varref  go to state 33


State 50

   38 a_term: a_term T_MUL • a_fact

    T_SUB          shift, and go to state 25
    T_LITERAL_STR  shift, and go to state 26
    T_ID           shift, and go to state 22
    T_INTEGER      shift, and go to state 27
    T_FLOAT        shift, and go to state 28
    '('            shift, and go to state 29

    a_fact  go to state 68
    varref  go to state 33


State 51

   39 a_term: a_term T_DIV • a_fact

    T_SUB          shift, and go to state 25
    T_LITERAL_STR  shift, and go to state 26
    T_ID           shift, and go to state 22
    T_INTEGER      shift, and go to state 27
    T_FLOAT        shift, and go to state 28
    '('            shift, and go to state 29

    a_fact  go to state 69
    varref  go to state 33


State 52

   54 expr_list: expr_list T_COMMA • a_expr

    T_SUB          shift, and go to state 25
    T_LITERAL_STR  shift, and go to state 26
    T_ID           shift, and go to state 22
    T_INTEGER      shift, and go to state 27
    T_FLOAT        shift, and go to state 28
    '('            shift, and go to state 29

    a_expr  go to state 70
    a_term  go to state 31
    a_fact  go to state 32
    varref  go to state 33


State 53

   35 a_expr: a_expr • T_ADD a_term
   36       | a_expr • T_SUB a_term
   48 arr_index: T_LS_BRACKET a_expr • T_RS_BRACKET

    T_ADD         shift, and go to state 48
    T_SUB         shift, and go to state 49
    T_RS_BRACKET  shift, and go to state 71


State 54

   29 assignment: T_ID arr_index T_ASSIGN • a_expr

    T_SUB          shift, and go to state 25
    T_LITERAL_STR  shift, and go to state 26
    T_ID           shift, and go to state 22
    T_INTEGER      shift, and go to state 27
    T_FLOAT        shift, and go to state 28
    '('            shift, and go to state 29
